gcc/testsuite/gcc.dg/noncompile/finstrument-control-flow-option.c
/* { dg-do compile } */
/* { dg-options "-finstrument-control-flow" } */
/* { dg-error "'-finstrument-control-flow' is not supported for this target" "" { target *-*-* } 0 } */
